--- a/css/main.css
+++ b/css/main.css
@@ -2052,7 +2052,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   transition: all 0.5s;
   z-index: 997;
-  background: #fff;
+  background: #4cd3e3;
 }
 
 #header.header-scrolled {
@@ -2313,7 +2313,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*  Homepage Styles
 /* =================================== */
 .section-gap {
-  padding: 120px 0;
+  padding: 70px 0;
 }
 
 .alert-msg {
@@ -4312,7 +4312,7 @@ dl.accordion.time-line:before {
 /*  Footer Styles
 /* =================================== */
 .footer-area {
-  background-color: #04091e;
+  background-color: #4cd3e3;
 }
 
 .single-footer-widget h4 {
